[package]
name = "linux_rs"
version = "0.1.1"
authors = ["Poseidon <18646154381@163.com>"]
edition = "2024"

[dependencies]
user_lib = { path = "../user_lib" }
bitflags = "2.10.0"
buddy_system_allocator = "0.12.0"
hashbrown = "0.16.1"
intrusive-collections = { version = "0.10.0", default-features = false, features = [
    "alloc",
] }
lazy_static = { version = "1.5.0", features = ["spin_no_std"] }
linkme = { version = "0.3", features = ["used_linker"] }
log = "0.4.29"

[profile.dev]
opt-level = 1
debug = true
