[package]
name = "mbrkit"
version = "1.0.0"
authors = ["Poseidon <18646154381@163.com>"]
edition = "2024"
description = "A CLI for building, inspecting, extracting, and verifying MBR-backed disk images"
license = "MIT"
readme = "README.md"
repository = "https://github.com/Poseidon-fan/linux-0.11-rs"
homepage = "https://github.com/Poseidon-fan/linux-0.11-rs/tree/main/mbrkit"
documentation = "https://docs.rs/mbrkit"
keywords = ["mbr", "disk-image", "partition", "cli", "boot"]
categories = ["command-line-utilities", "filesystem"]

[dependencies]
clap = { version = "4.5.40", features = ["derive"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
toml = "1.0.6"

[dev-dependencies]
tempfile = "3.20.0"
